--- a/cfg/mobilenet_v2/intel_bs1024.yml
+++ b/cfg/mobilenet_v2/intel_bs1024.yml
@@ -1,5 +1,5 @@
 SEED: 666 # random seed for reproduce results
-DEVICE_IDS: '0,1,2,3'
+DEVICE_IDS: '1,2,3,4'
 USE_DDP: True
 LOG_DIR: ""
 RELOAD_PTH: ~
@@ -9,17 +9,17 @@ ONE_HOT: False
 dataset:
     model_exp: '../model_exp'
     task_name: 'intel'
-    train_dir: "../datasets/intel/seg_train"
+    train_dir: "../datasets/intel/seg_train/"
     train_val_split: True
     train_val_split_ratio: 0.1
 
 aug:
     is_aug: True
-    SCALE: 1.125
-    HW: [150, 150]
+    SCALE: [0.8, 1.2]
+    HW: [256, 128]
     HFLIP: True
-    COLOR_JITTER: True
-    ROTATE: 10  # [0, ROTATE) Random Rotate
+    COLOR_JITTER: 0.2
+    ROTATE: 10
     CROP: True
 
 model:
@@ -44,6 +44,7 @@ train:
     optim: 'sgd'
     base_lr: 0.1
     # base_lr: 0.03
+    use_balanced_weights: False
     warmup_cosdecay: 10  # epoch of warm up
     total_epochs: 120
     batch_size: 1024
@@ -54,6 +55,6 @@ train:
 
 test:
     test_dir : "../datasets/intel/seg_test/"
-    model_path: "../model_exp/mobilenet_v2/intel/2021-10-26_15-19-13/model_best_acc.pth"
+    model_path: "../model_exp/intel/mobilenet_v2/2021-11-29_18-15-58/model_best_acc.pth"
     gpu: '4'
     batch_size: 128
